--- a/package.json
+++ b/package.json
@@ -35,6 +35,14 @@
   "devDependencies": {
     "@types/react": "^16.4.11",
     "babel-eslint": "^8.2.6",
-    "eslint": "^5.4.0"
+    "eslint": "^5.4.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "^1.15.3"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
