--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^5.4.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.15.3"
   },
   "prettier": {
