fix transpiled files in eslintignore.

--- a/.eslintignore
+++ b/.eslintignore
@@ -24,7 +24,8 @@
 /site
 
 # Transpiled JavaScript
-/public/scripts/app.js
+/public/app.js
+/public/bundle.js
 
 # Playground folder
 /src/playground
